product and category completed